Second HNG frontend commit

--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
             <p>It is for this reason I signed up for internship in frontend development. You can visit </br>
                 <a href="https://hng.tech/internship">HNG internship <img src="./image/hnginternship.png" alt="Dribbble logo" width="300" height="200"></a></br> 
                 to learn with projects which is time bound.</br>
+                <a href="https://keyword.dog/">for you SEO optimization</a>
+                <a href="https://scrapeanyweb.site/">To extract data from website</a>
             </p>
         </div>
       </section>
