--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <p data-testid="slackDisplayName">Ukachukwu Promise</p>
         <p data-testid="slackEmail">ukazpromise@gmail.com</p>
         <img src="./image/slackprofilepix.jpeg" alt="Slack Profile Picture" data-testid="slackProfilePicture">
-        <p data-testid="currentTimeUTC">Current Time in UTC:16:51 <span id="utcTime"></span></p>
-        <p data-testid="currentDay">Current Day:2/07/2024 <span id="currentDay"></span></p>
+        <p data-testid="currentTimeUTC">Current Time in UTC:<span id="utcTime">17:12</span></p>
+        <p data-testid="currentDay">Current Day:<span id="currentDay">2/07/2024</span></p>
       </section>
       <section data-testid="goal-section" class="section">
         <h2>Goal 1: Master Coding</h2>
